@@ -30,7 +30,7 @@ import static org.junit.Assert.assertNull;
 
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.model.User;
-import java.net.URL;
+import java.net.URI;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.WebRequest;
 import org.junit.Rule;
@@ -71,7 +71,7 @@ public class UserSeedChangeListenerTest {
 
         JenkinsRule.WebClient wc = j.createWebClient();
         WebRequest webRequest = new WebRequest(
-                new URL(j.getURL() + alice.getUrl() + "/" + userSeed.getDescriptor().getDescriptorUrl() + "/renewSessionSeed"),
+                new URI(j.getURL() + alice.getUrl() + "/" + userSeed.getDescriptor().getDescriptorUrl() + "/renewSessionSeed").toURL(),
                 HttpMethod.POST
         );
 
